updated dynamic dom

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <form class="container">
       <input type="text" class="api-input" name="inputKey" />
+      <div>
+        <img src="" class="gif-dom" alt="" />
+      </div>
       <div class="api-res-cont"></div>
     </form>
     <script src="./scripts/gifyAPI.js"></script>
