added placeholder and styles

--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
     </div>
     <div>
       <span
-        ><input type="text" placeholder="Hello" />
+        ><input type="text" placeholder="Add the text message here" />
         <img src="" class="gif-dom" alt="loading"
       /></span>
       <input type="button" class="show" value="GIF's" />
     </div>
     <form class="form-container">
-      <input type="text" class="api-input" name="inputKey" />
+      <input
+        type="text"
+        class="api-input"
+        placeholder="Please input the GIF key"
+        name="inputKey"
+      />
 
       <div class="api-res-cont"></div>
     </form>
